force-app/main/default/objects/Purchase_Order_Allocation__c/Purchase_Order_Allocation__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Allocation</label>
    <nameField>
        <displayFormat>POA - {00000}</displayFormat>
        <label>Purchase Order Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Allocation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>