force-app/main/default/objects/Purchase_Order_Allocation__c/fields/Allocated_Qty__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Qty__c</fullName>
    <label>Allocated Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>