force-app/main/default/objects/Purchase_Order_Allocation__c/fields/Purchase_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Line Item</label>
    <referenceTo>Purchase_Order_Line_Item__c</referenceTo>
    <relationshipLabel>Purchase Order Allocation</relationshipLabel>
    <relationshipName>Purchase_Order_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>