force-app/main/default/objects/Purchase_Order_Allocation__c/fields/Supply_Request__c.field-meta.xml
<CustomField>
    <fullName>Supply_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supply Request</label>
    <referenceTo>Supply_Request__c</referenceTo>
    <relationshipLabel>Purchase Order Allocation</relationshipLabel>
    <relationshipName>Purchase_Order_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>