force-app/main/default/objects/Purchase_Order_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supply_Request__c</columns>
    <columns>Purchase_Order_Line_Item__c</columns>
    <columns>Allocated_Qty__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>